# Volume-Rendering

./: .gitignore  CMakeLists - Old.txt  CMakeLists - alternative.txt  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
flip_python/: flip_api.py  flip_eval.py
flip_python/flip.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
include/Flip/: FLIP.h
include/core/: camera.h  framebuffer.h  lightSource.h  main.h  object.h  objectLoader.h  ray.h  renderer.h  scene.h  shader.h  texture.h  texture3D.h  window.h
include/core/GUI/: volumeGUI.h
include/core/Objects/: Sphere.h  object.h  volume.h
include/core/Scenes/: scene.h  volumeScene.h
include/live-application/: controller.h  live-application.h
include/live-application/GUI/: volumeGUI.h
include/tester/: tester.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
lib/glfw/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  offscreen.vcxproj  offscreen.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
lib/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
lib/glfw/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cmake_install.cmake  cursor.vcxproj  cursor.vcxproj.filters  empty.vcxproj  empty.vcxproj.filters  events.vcxproj  events.vcxproj.filters  gamma.vcxproj  gamma.vcxproj.filters  glfwinfo.vcxproj  glfwinfo.vcxproj.filters  icon.vcxproj  icon.vcxproj.filters  iconify.vcxproj  iconify.vcxproj.filters  inputlag.vcxproj  inputlag.vcxproj.filters  joysticks.vcxproj  joysticks.vcxproj.filters  monitors.vcxproj  monitors.vcxproj.filters  msaa.vcxproj  msaa.vcxproj.filters  opacity.vcxproj  opacity.vcxproj.filters  reopen.vcxproj  reopen.vcxproj.filters  tearing.vcxproj  tearing.vcxproj.filters  threads.vcxproj  threads.vcxproj.filters  timeout.vcxproj  timeout.vcxproj.filters  title.vcxproj  title.vcxproj.filters  triangle-vulkan.vcxproj  (+3 more)
shaders/: accumulation.frag  copy.frag  framebuffer.frag  monte_carlo.frag  monte_carlo.vert  ray_marching.frag  transfer_function.frag  triangle.frag  volume.frag  volume_debug.frag
src/core/: camera.cpp  framebuffer.cpp  main.cpp  objectLoader.cpp  ray.cpp  renderer.cpp  scene.cpp  sceneSphere.cpp  texture.cpp  texture3D.cpp  window.cpp
src/core/GUI/: volumeGUI.cpp
src/core/Objects/: Sphere.cpp  volume.cpp
src/core/Scenes/: volumeScene.cpp
src/core/Scenes/Objects/: camera.cpp  volume.cpp
src/live-application/: controller.cpp  live-application.cpp  window.cpp
src/live-application/GUI/: volumeGUI.cpp
src/tester/: tester.cpp
